# Production-Grade-Hybrid-RAG-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: pipeline.yaml
data/: benchmark_questions.json  benchmark_questions_with_references.json
data/auth/: question_history.json  users.json
data/raw/: architecture_summary_notes.txt  benchmark_support_notes.txt  end_to_end_flow_notes.txt  (+6 more)
docs/: system-design.md
journal/: day-1.md  day-2.md  day-3.md
reports/: README.md  benchmark_comparison.md  benchmark_dashboard.html  benchmark_history.md  benchmark_summary.md
scripts/: build_benchmark_history.py  compare_benchmarks.py  generate_dashboard.py  open_dashboard.ps1  run_app.ps1  run_app.py  run_baseline.py  run_benchmark.py  run_cli.py  show_benchmark_history.py  show_latest_answer.py  show_latest_answers.py  snapshot_benchmark.py
tests/: test_app_server.py  test_auth.py  test_benchmark.py  test_benchmark_compare.py  test_benchmark_history.py  test_benchmark_references.py  test_benchmark_snapshot.py  test_chunking.py  test_chunking_strategies.py  test_cli.py  test_dashboard.py  test_env.py  test_evaluation_reporting.py  test_evaluation_simple.py  test_generation_groq_provider.py  test_generation_openai_provider.py  test_generation_prompt.py  test_generation_simple.py  test_ingestion.py  test_ingestion_router.py  test_retrieval_bm25_dense_fusion.py  test_retrieval_orchestrator.py  test_retrieval_simple.py  test_show_benchmark_history.py  test_show_latest_answer.py  test_show_latest_answers.py  test_uploads.py
(+74 files in other folders)
