[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Production RAG pipeline with evaluation layer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "beautifulsoup4>=4.12",
  "pypdf>=5.0",
  "python-docx>=1.1",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]
openai = ["openai>=1.40"]
groq = ["groq>=0.11"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
rag-pipeline = "rag_pipeline.cli:main"
